--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom Unit4 Coins</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class = "body">
-    <form>      
-          <label>How Many?</label>  <input type="number" id = "money" name = "howmany">
-          <br>
+
+<body class="body">
+    <form>
+        <label>How Many?</label> <input type="number" id="money" name="howmany">
+        <br>
         <label for="coined">Which coin?</label>
         <select name="cointype" id="coiner">
-            <option value="penny">penny</option>
+            <option value="quarter">Quarter</option>
             <br>
-            <option value="nickel">nickel</option>
+            <option value="nickel">Nickel</option>
             <br>
-            <option value="dime">dime</option>
+            <option value="dime">Dime</option>
             <br>
-            <option value="quarter">quarter</option>
+            <option value="penny">Penny</option>
             <br>
         </select>
         <br>
-      
 
-    
-       <button type="submit">Make Money!</button>
-    </form> 
+        <button class="pushable" type="submit"><span class="front">Make Money!</span></button>
+    </form>
     <section>
-    <div class = "coiners"></div> 
+        <div class="coiners"></div>
     </section>
-
- 
 
     <script src="script.js"> </script>
 
 </body>
+
 </html>
