--- a/index.html
+++ b/index.html
@@ -27,12 +27,8 @@
 
         <button class="pushable" type="submit"><span class="front">Make Money!</span></button>
     </form>
-    <section>
-        <div class="coiners"></div>
+    <section id="deletecoin">
     </section>
-
     <script src="script.js"> </script>
-
 </body>
-
 </html>
