--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom Unit4 Coins</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body class="body">
     <form>
         <label>How Many?</label> <input type="number" id="money" name="howmany">
@@ -24,11 +22,10 @@
             <br>
         </select>
         <br>
-
         <button class="pushable" type="submit"><span class="front">Make Money!</span></button>
     </form>
-    <section id="deletecoin">
-    </section>
+    <container class="deletecoin">
+    </container>
     <script src="script.js"> </script>
 </body>
 </html>
